--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,42 @@
-<h2>Sign up</h2>
+<div class="boxes">
+  <div class="box-inners">
+    <h1>info-management</h1>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="box-name">
+        <%= f.label :firstname, "姓（firstname）"%><br /> 
+        <%= f.text_field :firstname, autofocus: true, placeholder:"Put First Name" %>
+      </div>
+      <div class="box-name">
+        <%= f.label :lastname, "名前（lastname）"%><br />
+        <%= f.text_field :lastname, autofocus: true, placeholder:"Put Last Name" %>
+      </div>
+      <div class="box-name">
+        <%= f.label :firstname_kana, "姓（カナ）"%><br />
+        <%= f.text_field :firstname_kana, autofocus: true, placeholder:"Put First Name Kana" %>
+      </div>
+      <div class="box-name">
+        <%= f.label :lastname_kana, "名前（カナ）"%><br />
+        <%= f.text_field :lastname_kana, autofocus: true, placeholder:"Put Last Name Kana" %>
+      </div>
+      <div class="box-emails">
+        <%= f.label :email, "Eメール"%><br />
+        <%= f.email_field :email, autofocus: true, placeholder:"Put Your Email" %>
+      </div>
+      <div class="box-passwords">
+        <% if @minimum_password_length %>
+         <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.label :password, "パスワード"%><br />
+        <%= f.password_field :password, autocomplete: "current-password",placeholder:"Password"  %>
+      </div>
+      <div class="box-passwords">
+        <%= f.password_field :password_confirmation, placeholder:"Password Again"  %>
+      </div>
+      <div class="box-logins">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
