--- a/app/assets/stylesheets/summary/mypage.css
+++ b/app/assets/stylesheets/summary/mypage.css
@@ -1,3 +1,17 @@
+/* サイドバーはここから */
+
+.favolite {
+  background-color: white;
+  width: 200px;
+  height: 50vh;
+  margin-top: 20px;
+  margin-left: 50px
+}
+
+
+
+/* メインバーはここから */
+
 .main-bar {
   background-color: #EEEEEE;
   width: calc(100vw - 300px);
@@ -87,4 +101,55 @@
   height: 40px;
   margin-right: 30px;
   object-position:50% 50%;
+}
+
+
+/* 追加ボタン */
+
+.purchase-btn {
+  width: 120px;
+  background: #32CD32;
+  text-align: center;
+  border-radius: 4%;
+  bottom: 32px;
+  right: 32px;
+  position: fixed;
+  padding: 15px;
+}
+
+.purchase-btn-text {
+  color: #fff;
+  display: block;
+  font-size: 22px;
+  text-decoration: none;
+  margin-bottom: 5px;
+}
+
+.purchase-btn-icon {
+  width: 60%;
+}
+
+/* chatボタン */
+
+.chat-btn {
+  width: 120px;
+  background: #87CEFA;
+  text-align: center;
+  border-radius: 4%;
+  bottom: 180px;
+  right: 32px;
+  position: fixed;
+  padding: 15px;
+}
+
+.chat-btn-text {
+  color: #fff;
+  display: block;
+  font-size: 22px;
+  text-decoration: none;
+  margin-bottom: 5px;
+}
+
+.chat-btn-icon {
+  width: 60%;
 }
