--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,17 +3,22 @@
     
     <%= link_to image_tag("home", class:"home-icon"), "/" %>
     <%# 「ホームアイコンのリンクはroot_pathに後ほど設定する」 %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
+    
+      <form class="search-form" action="#">
+        <input class='input-box' placeholder='キーワードから探す'>
+        <button class="search-button">
+          <%= image_tag "search.png", class:"search-icon" %>
+        </button>
+      </form>
+    
     <h1 class="title">info-management</h1>
-    <%= link_to image_tag("plus", class:"plus-icon"), "/" %>
-    <%= link_to 'ChatRoom', "/", class: "chat" %>
-    <%= link_to image_tag("acount", class:"acount-icon"), "/" %>
+    <%# <%= link_to 'ChatRoom', "/", class: "chat" %>
+    <p class="usernames"><%= image_tag "acount.png", class:"acount-icon" %></p>
+    <%= link_to image_tag("logout", class:"logout-icon"), destroy_user_session_path, method: :delete %>
   </div>
+  
+  <%# <p class="usernames"><%= current_user.firstname+" "+current_user.lastname %></p> 
+
   <%# <div class='nav'>
     <ul class='lists-left'>
     </ul>
@@ -26,5 +31,6 @@
         <%# <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
       
     <%# </ul> %>
-  <%# </div> %> 
+  <%# </div> %>
+
 </header>
