--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -3,67 +3,111 @@
 
 <%# 以下、メイン画面 %>
 <div class="wrapper">
-  <div class="main-bar">
-    <%# 顧客（customer）がここから %>
+  <div class="customer-main-bar">
+    <%# 顧客の基本情報がここから %>
     <div class="customer">
       <div class="customer-design">
-        <div class="customer-image">
-          <%= image_tag "customer.png", class:"customer-pict" %>
-        </div>
         <div class="customer-lavel">
-          <span class="main-lavel">担当顧客情報</span>
+          <span class="main-lavel">　Basic information</span>
         </div>
       </div>
       <div class="customer-info">
        <ul> 
-        <li>・あ</li>
-        <li>・い</li>
-        <li>・う</li>
+        <li>会社名  初受注日</li>
+        <li>住所</li>
+        <li>業種  従業員数</li>
+        <li>売上  決算時期</li>
+        <li>利用製品</li>
        </ul>
       </div>
     </div>
-    <%# 顧客（customer）がここまで %>
+    <%# 顧客の基本情報がここまで %>
 
-    <%# プロジェクト（project）がここから %>
+    <%# 先方関係者がここから %>
     <div class="project">
       <div class="project-design">
-        <div class="project-image">
-          <%= image_tag "project.png", class:"project-pict" %>
-        </div>
         <div class="project-lavel">
-          <span class="main-lavel">担当プロジェクト情報</span>
+          <span class="main-lavel">　先方関係者</span>
         </div>
       </div>
       <div class="project-info">
        <ul> 
-        <li>・か</li>
-        <li>・き</li>う
-        <li>・く</li>
-        <li>・け</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
        </ul>
       </div>
     </div>
-    <%# プロジェクト（project）がここまで %>
+    <%# 先方関係者がここまで %>
 
-    <%# チーム（team）がここから %>
+    <%# グループ会社がここから %>
     <div class="team">
       <div class="team-design">
-        <div class="team-image">
-          <%= image_tag "team.png", class:"team-pict" %>
-        </div>
         <div class="team-lavel">
-          <span class="main-lavel">所属チーム情報管理</span>
+          <span class="main-lavel">　グループ会社</span>
         </div>
       </div>
       <div class="team-info">
        <ul> 
-        <li>・さ</li>
-        <li>・し</li>
-        <li>・す</li>
+        <li></li>
+        <li></li>
+        <li></li>
        </ul>
       </div>
     </div>
-    <%# チーム（team）がここまで %>
+    <%# グループ会社がここまで %>
+
+    <%# トラブル＆クレームがここから %>
+    <div class="team">
+      <div class="team-design">
+        <div class="team-lavel">
+          <span class="main-lavel">　トラブル/クレーム一覧</span>
+        </div>
+      </div>
+      <div class="team-info">
+       <ul> 
+        <li></li>
+        <li></li>
+        <li></li>
+       </ul>
+      </div>
+    </div>
+    <%# トラブル＆クレームがここまで %>
+
+    <%# 受注歴がここから %>
+    <div class="team">
+      <div class="team-design">
+        <div class="team-lavel">
+          <span class="main-lavel">　受注歴</span>
+        </div>
+      </div>
+      <div class="team-info">
+       <ul> 
+        <li></li>
+        <li></li>
+        <li></li>
+       </ul>
+      </div>
+    </div>
+    <%# 受注歴がここまで %>
+
+    <%# 突起事項・引継事項がここから %>
+    <div class="team">
+      <div class="team-design">
+        <div class="team-lavel">
+          <span class="main-lavel">　突起事項・引継事項</span>
+        </div>
+      </div>
+      <div class="team-info">
+       <ul> 
+        <li></li>
+        <li></li>
+        <li></li>
+       </ul>
+      </div>
+    </div>
+    <%# 受注歴がここまで %>
 
     <div class='chat-btn'>
       <span class='chat-btn-text'>チャット</span>
