--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -3,9 +3,9 @@
 
 <%# 以下、メイン画面 %>
 <div class="wrapper">
-  <div class="customer-main-bar">
+  <div class="customer-info-bar">
     <%# 顧客の基本情報がここから %>
-    <div class="customer">
+    <div class="customer-basic">
       <div class="customer-design">
         <div class="customer-lavel">
           <span class="main-lavel">　Basic information</span>
