--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     
-    <%= link_to image_tag("home", class:"home-icon"), "/" %>
+    <%= link_to image_tag("home", class:"home-icon"), root_path %>
     <%# 「ホームアイコンのリンクはroot_pathに後ほど設定する」 %>
     
       <form class="search-form" action="#">
