--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,9 @@
+<header class='login-header'>
+  <h1 class="header-login-title">info-management</h1>
+</header>
+
 <div class="boxes">
   <div class="box-inners">
-    <h1>info-management</h1>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
