--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -3,154 +3,91 @@
 <div class="items-sell-contents">
   
   <div class="items-sell-main">
-    <h2 class="items-sell-title">商品の情報を入力</h2>
-    <%= form_with model: @item, url:items_path, local: true do |f| %>
+    <h2 class="items-sell-title">お客様の情報を入力ください</h2>
+    <%= form_with model: @customer, url:new_customer_path, local: true do |f| %>
 
-    <%= render 'shared/error_messages', model: @item %>
-
-    <%# 出品画像 %>
-    <div class="img-upload">
-      <div class="weight-bold-text">
-        出品画像
-        <span class="indispensable">必須</span>
-      </div>
-      <div class="click-upload">
-        <p>
-          クリックしてファイルをアップロード
-        </p>
-        <%= f.file_field :image, id:"item-image" %>
-      </div>
-    </div>
-    <%# /出品画像 %>
     <%# 商品名と商品説明 %>
     <div class="new-items">
       <div class="weight-bold-text">
-        商品名
+        お客様名
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :name, class:"items-text", id:"item-name", placeholder:"商品名（必須 40文字まで)", maxlength:"40" %>
+      <%= f.text_area :name, class:"items-text", id:"item-name", placeholder:"会社名（必須 100文字まで)", maxlength:"100" %>
       <div class="items-explain">
         <div class="weight-bold-text">
-          商品の説明
+          お客様住所
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_area :description, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" ,maxlength:"1000" %>
+        <%= f.text_area :address, class:"items-text", id:"item-info", placeholder:"会社住所（必須 200文字まで）" ,rows:"3" ,maxlength:"200" %>
       </div>
     </div>
     <%# /商品名と商品説明 %>
 
     <%# 商品の詳細 %>
     <div class="items-detail">
-      <div class="weight-bold-text">商品の詳細</div>
       <div class="form">
         <div class="weight-bold-text">
           カテゴリー
-          <span class="indispensable">必須</span>
         </div>
         <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box", id:"item-category"}) %>
-        <div class="weight-bold-text">
-          商品の状態
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.collection_select(:status_id, Status.all, :id, :name, {}, {class:"select-box", id:"item-sales-status"}) %>
       </div>
     </div>
     <%# /商品の詳細 %>
 
+    <%# 商品名と商品説明 %>
+    <div class="new-items">
+      <div class="weight-bold-text">
+        プロダクト
+      </div>
+      <%= f.text_area :product, class:"items-text", id:"item-name", placeholder:"利用プロダクト（100文字まで)", rows:"2", maxlength:"100" %>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+          従業員数
+        </div>
+        <%= f.text_area :employee, class:"items-text", id:"item-info", placeholder:"従業員数" , rows:"2", maxlength:"100" %>
+      </div>
+       <div class="items-explain">
+        <div class="weight-bold-text">
+          売り上げ
+        </div>
+        <%= f.text_area :sales, class:"items-text", id:"item-info", placeholder:"売り上げ" , rows:"2", maxlength:"100" %>
+      </div>
+    </div>
+    <%# /商品名と商品説明 %>
+
     <%# 配送について %>
     <div class="items-detail">
-      <div class="weight-bold-text question-text">
-        <span>配送について</span>
-        <a class="question" href="#">?</a>
-      </div>
       <div class="form">
         <div class="weight-bold-text">
-          配送料の負担
-          <span class="indispensable">必須</span>
+          決算時期
         </div>
-        <%= f.collection_select(:beard_id, Beard.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
-        <div class="weight-bold-text">
-          発送元の地域
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box", id:"item-prefecture"}) %>
-        <div class="weight-bold-text">
-          発送までの日数
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.collection_select(:day_id, Day.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
+        <%= f.collection_select(:settlement_id, Settlement.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
       </div>
     </div>
     <%# /配送について %>
 
     <%# 販売価格 %>
-    <div class="sell-price">
-      <div class="weight-bold-text question-text">
-        <span>販売価格<br>(¥300〜9,999,999)</span>
-        <a class="question" href="#">?</a>
+    <div class="new-items">
+      <div class="weight-bold-text">
+        引継事項
       </div>
-      <div>
-        <div class="price-content">
-          <div class="price-text">
-            <span>価格</span>
-            <span class="indispensable">必須</span>
-          </div>
-          <span class="sell-yen">¥</span>
-          <%= f.text_field :price, class:"price-input", id:"item-price", placeholder:"例）300" %>
+      <%= f.text_area :takeover, class:"items-text", id:"item-name", placeholder:"引継ぎ事項（1000文字まで)",rows:"7"  ,maxlength:"1000" %>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+          特記事項
         </div>
-        <div class="price-content">
-          <span>販売手数料 (10%)</span>
-          <span>
-            <span id='add-tax-price'></span>円
-          </span>
-        </div>
-        <div class="price-content">
-          <span>販売利益</span>
-          <span>
-            <span id='profit'></span>円
-        </div>
-        </span>
+        <%= f.text_area :memo, class:"items-text", id:"item-info", placeholder:"特記事項（1000文字まで）" ,rows:"7" ,maxlength:"1000" %>
       </div>
     </div>
     <%# /販売価格 %>
 
-    <%# 注意書き %>
-    <div class="caution">
-      <p class="sentence">
-        <a href="#">禁止されている出品、</a>
-        <a href="#">行為</a>
-        を必ずご確認ください。
-      </p>
-      <p class="sentence">
-        またブランド品でシリアルナンバー等がある場合はご記載ください。
-        <a href="#">偽ブランドの販売</a>
-        は犯罪であり処罰される可能性があります。
-      </p>
-      <p class="sentence">
-        また、出品をもちまして
-        <a href="#">加盟店規約</a>
-        に同意したことになります。
-      </p>
-    </div>
-    <%# /注意書き %>
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
-      <%= f.submit "出品する" ,class:"sell-btn" %>
-      <%=link_to 'もどる', root_path, class:"back-btn" %>
+      <%= f.submit "登録する" ,class:"sell-btn" %>
+      <%=link_to 'トップにもどる', root_path, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
   </div>
   <% end %>
 
-  <footer class="items-sell-footer">
-    <ul class="menu">
-      <li><a href="#">プライバシーポリシー</a></li>
-      <li><a href="#">フリマ利用規約</a></li>
-      <li><a href="#">特定商取引に関する表記</a></li>
-    </ul>
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-    <p class="inc">
-      ©︎Furima,Inc.
-    </p>
-  </footer>
 </div>
