--- a/app/assets/stylesheets/customer/new.css
+++ b/app/assets/stylesheets/customer/new.css
@@ -1,5 +1,8 @@
 /* border-bottom: 1px solid #eee; */
 
+.register-title {
+  color: black;
+}
 
 .items-sell-contents {
   background-color: #f5f5f5;
@@ -226,4 +229,35 @@
 
 .inc {
   font-size: 13px;
+}
+
+.input-birth-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.input-birth-wrap>select {
+  width: 75px;
+  margin-top: 5px;
+  height: 45px;
+  padding-left: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.input-birth-wrap>p {
+  line-height: 60px;
+  padding: 0 5px;
+}
+
+.form-text {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.in-charge-check {
+  text-align: left;
 }
