--- a/app/assets/stylesheets/summary/mypage.css
+++ b/app/assets/stylesheets/summary/mypage.css
@@ -2,10 +2,10 @@
 
 .favolite {
   background-color: white;
-  width: 200px;
+  width: 150px;
   height: 50vh;
   margin-top: 20px;
-  margin-left: 50px
+  margin-left: 25px
 }
 
 
@@ -14,7 +14,7 @@
 
 .main-bar {
   background-color: #EEEEEE;
-  width: calc(100vw - 300px);
+  width: calc(100vw - 200px);
   flex-direction: column;
   justify-content: left;
   align-items: left;
@@ -32,6 +32,7 @@
   background-color: white;
   width :60vw;
   height: 40vh;
+  position: relative;
 }
 
 .customer-design {
@@ -48,6 +49,19 @@
   height: 40px;
   margin-right: 30px;
   object-position:50% 50%;
+}
+
+.customer-list {
+  font-size: 20px;
+  position: absolute;
+
+  right: 10px;
+
+  bottom: 0;
+
+  margin: 0;
+
+  padding: 0;
 }
 
 
