--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -3,8 +3,9 @@
 <div class="items-sell-contents">
   
   <div class="items-sell-main">
-    <h2 class="items-sell-title">お客様の情報を入力ください</h2>
-    <%= form_with model: @customer, url:new_customer_path, local: true do |f| %>
+  　
+    <h2 class="items-sell-title">【顧客登録】お客様の情報を入力ください</h2>
+    <%= form_with model: @customer, url:customers_path, local: true do |f| %>
 
     <%# 商品名と商品説明 %>
     <div class="new-items">
@@ -13,6 +14,24 @@
         <span class="indispensable">必須</span>
       </div>
       <%= f.text_area :name, class:"items-text", id:"item-name", placeholder:"会社名（必須 100文字まで)", maxlength:"100" %>
+      <br><br>
+      <div class='form-text-wrap'>
+      <label class="form-text">初受注日</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :firstdate,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1980,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
       <div class="items-explain">
         <div class="weight-bold-text">
           お客様住所
@@ -80,6 +99,16 @@
       </div>
     </div>
     <%# /販売価格 %>
+
+    <%# 担当登録部分 javascriptを使いチェックボックスの挙動で要素を作るか消すかを実装する　%>
+    <div class="items-explain">
+        <div class="weight-bold-text">
+          自分を担当に追加しますか？
+        </div>
+        <%= check_box :customer, :user_ids, {class: "check_box"}, true, false %>
+    </div>
+    <br><br>
+    <%# 担当登録部分はここまで %>
 
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
