--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -20,6 +20,9 @@
         <br><li class="customer-name"><span class="customer-product">【利用製品】 <%= @customer.product %></li>
        </ul>
       </div>
+      <div class="customer-list">
+       <%= link_to "顧客情報編集画面へ", edit_customer_path %>
+      </div>
     </div>
     <%# 顧客の基本情報がここまで %>
 
@@ -38,14 +41,16 @@
                <div class="partner-role"> 　  役職</div>
                <div class="partner-dicision"> 　  決裁権（有無）</div>
              </div>
+             <div class="partner-space">
            </li>
          <% @partners.each do |partner| %>
            <li>
              <div class="partner">
-               <div class="partner-name">  ・ <%= link_to partner.firstname+partner.lastname, ""%></div> 
-               <div class="partner-role"> 　  <%= link_to partner.role, ""%></div>
-               <div class="partner-dicision"> 　  <%= link_to partner.decision.name, ""%></div>
+               <div class="partner-name">  ・ <%= link_to partner.firstname+partner.lastname,  "/partners/#{partner.id}/edit"%></div> 
+               <div class="partner-role"> 　  <%= link_to partner.role, "/partners/#{partner.id}"%></div>
+               <div class="partner-dicision"> 　  <%= link_to partner.decision.name, "/partners/#{partner.id}"%></div>
              </div>
+             <div class="partner-space">
            </li>
          <% end %>
        </ul>
@@ -54,17 +59,34 @@
     <%# 先方関係者がここまで %>
 
     <%# グループ会社がここから %>
-    <div class="team">
-      <div class="team-design">
-        <div class="team-lavel">
-          <span class="main-lavel">　グループ会社</span>
+    <div class="customer-basic">
+      <div class="customer-design">
+        <div class="customer-lavel">
+          <span class="main-lavel">　グループ会社一覧</span>
         </div>
       </div>
-      <div class="team-info">
-       <ul> 
-        <li></li>
-        <li></li>
-        <li></li>
+      <div class="gcustomer-list">
+       <ul>
+          <li>
+             <div class="gcustomer">
+               <div class="gcustomer-name">  　 会社名</div> 
+               <div class="gcustomer-category"> 　  業種</div>
+               <div class="gcustomer-employee"> 　  従業員数</div>
+               <div class="gcustomer-sales"> 　  売り上げ</div>
+             </div>
+             <div class="partner-space">
+           </li>
+         <% @gcustomers.each do |gcustomer| %>
+           <li>
+             <div class="gcustomer">
+               <div class="gcustomer-name">  ・ <%= link_to gcustomer.name, ""%></div> 
+               <div class="gcustomer-category"> 　  <%= link_to gcustomer.category.name, ""%></div>
+               <div class="gcustomer-employee"> 　  <%= link_to gcustomer.employee, ""%>人</div>
+               <div class="gcustomer-sales"> 　  <%= link_to gcustomer.sales, ""%>億円</div>
+             </div>
+             <div class="partner-space">
+           </li>
+         <% end %>
        </ul>
       </div>
     </div>
